--- a/ProyectoWebVik/pom.xml
+++ b/ProyectoWebVik/pom.xml
@@ -48,6 +48,18 @@ Facilita la actualización de Jakarta EE (solo cambias una versión en el BOM)
 		</dependency>
 
 		<dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-core</artifactId>
+	        <version>6.6.12.Final</version>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.hibernate.validator</groupId>
+	        <artifactId>hibernate-validator</artifactId>
+	        <version>8.0.1.Final</version>
+	    </dependency>
+
+		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 			<scope>provided</scope>
